--- a/day-1.html
+++ b/day-1.html
@@ -28,11 +28,11 @@ h<sub>2</sub>0
     <source src="song1.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </au -->
-  <!-- <video controls>
+  <video controls>
     <source src="horse.ogg" type="audio/ogg">
     <source src="video1.mp4" type="video/mp4">
     Your browser does not support the audio element.
-  </video> -->
+  </video>
   <q>THIS IS ME </q>
 </body>
 </html>
