--- a/day-1.html
+++ b/day-1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>DAY-01</title>
 </head>
 <body>
-<!-- <center>
+<center>
 <h1>Name:Yashwanth.k</h1>
 <h2>Branch:Cse</h2>
 <h3>Id:2200032734</h3>
@@ -13,21 +13,21 @@
 <h6>yashwanth2221@gmail.com</h6>
 <h7>Hello</h7>
 </center> -->
-<!-- <p>My name is yashwanth.</p>
+<p>My name is yashwanth.</p>
 h<sub>2</sub>0
-10<sup>3</sup> -->
-<!-- <textarea>Message</textarea>
-<button>submit</button> -->
-<!-- <iframe href=""></iframe> -->
-<!-- <a href="mailto:yashwanthreddy582@gmail.com">yashwanth</a> -->
-<!-- <small><b>HELLO</b></small>
+10<sup>3</sup>
+<textarea>Message</textarea>
+<button>submit</button>
+<<iframe href=""></iframe>
+<<a href="mailto:yashwanthreddy582@gmail.com">yashwanth</a> -->
+<<small><b>HELLO</b></small>
 <time>Time:10:00</time> -->
-<!-- <img src="https://i.ibb.co/wsQkCkB/Apeksha.jpg" height="100" width="200"></img> -->
-<!-- <audio controls>
+<img src="https://i.ibb.co/wsQkCkB/Apeksha.jpg" height="100" width="200"></img> -->
+<audio controls>
     <source src="horse.ogg" type="audio/ogg">
     <source src="song1.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
-  </au -->
+  </au
   <video controls>
     <source src="horse.ogg" type="audio/ogg">
     <source src="video1.mp4" type="video/mp4">
